# nonebot_plugin_ellyesmeal

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_ellyesmeal/: __init__.py  data_source.py  mongo_source.py  utils.py
nonebot_plugin_ellyesmeal/txt2img/: txt2img.py
